syntax = "proto3";

package instance.v1;

option go_package = "github.com/theleeeo/overseer/api-go/instance/v1;instance";

message Instance {
  int32 id = 1;
  int32 environment_id = 2;
  int32 application_id = 3;
  string name = 4;
}

service InstanceService {
  // rpc Get(GetRequest) returns (GetResponse);

  rpc Create(CreateRequest) returns (CreateResponse);

  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc List(ListRequest) returns (ListResponse);

  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ResponsePagination { int32 total = 1; }

// message GetRequest {
//   int32 environment_id = 2;
//   int32 application_id = 3;
// }

// message GetResponse { Instance instance = 1; }

message CreateRequest {
  int32 environment_id = 1;
  int32 application_id = 2;
  string name = 3;
}

message CreateResponse { int32 id = 1; }

message UpdateRequest {
  int32 id = 1;
  string name = 2;
}

message UpdateResponse {}

message ListRequest { string name = 1; }

message ListResponse {
  repeated Instance instances = 1;
  ResponsePagination pagination = 2;
}

message DeleteRequest { int32 id = 1; }

message DeleteResponse {}